Added fetures to find user by email or username